# bt_song_song

./: .ycm_extra_conf.py
btl/: CMakeLists.txt  common.cpp  common.h  main.c  main.cpp  main_one_sided.cpp  main_seq.cpp
btl/tools/: compareMatrices.cpp  genmatrix.c  viewmatrix.c
btl/utils/: io.c  io.cpp  io.h  io_impl.h
lab1/hello_world/: hello_world.c
lab1/ping_pong/: ping_pong.c
lab1/ring_send/: ring_send.cpp
lab2/matrix_multiply/: CMakeLists.txt  io.c  io.h  main_group.c  main_p2p.c  matrix.c  matrix.h
lab2/mpi_barrier/: mpi_barrier.c
lab2/mpi_bcast/: mpi_bcast.c
lab2/mpi_gather/: mpi_gather.c
lab2/mpi_reduce/: mpi_reduce.c
lab2/mpi_scatter/: mpi_scatter.c
lab4/master_slave/: main.c
lab5/pi_calculation/: main.cpp
lab6/in_mh_1_toi_10/: main.cpp
lab6/nhan_vector/: thread_vector_multiply.cpp
lab8/insertion_sort/: main.cpp
lab8/x_power_16/: main.cpp
